--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "cookies-next": "^5.1.0",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
+    "hammerjs": "^2.0.8",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
